Version 0.3
~~~~~~~~~~~
* Post DiFX-1.5
* Mark5B support
* format override support
* Pulsar profile mode
* Change sign convention associated with vex file
   Note on clock sign conventions: As far as I (WFB) can tell, vex uses one sign
   convention and the VLBA, DiFX and FITS all use the other.
* Don't let VSN=None get through.
* Allow file-based correlation using ANTENNA block values file= and filelist=
* Split jobs at leap second
* Add minLength parameter
* Fix splitting jobs at clock boundaries
* break= parameter to force job breaks at particular times
* ANTENNA blocks get antenna names capitalized
* Clean up parsing of .v2d a little bit
* (Adam) Initialize some ANTENNA block variables
* (Adam) Clean up LBA format
* Support a wider range of time formats in the .v2d file
* Make .v2d parameters "mjdStart" and "mjdStop" operate at specified times, not 
  at scan boundaries
* EOP table support from within .v2d file

Version 0.2
~~~~~~~~~~~
* Make several classes subclasses of VexInterval to simplify things
* Compute "Computational load" -- an estimate of the number of numerical 
  operations required.
* Initial (untested) support for ephemeris-driven targets
* Estimate output data size / allow job splitting based on job size
* Version for DiFX-1.5

Version 0.1
~~~~~~~~~~~
* simplified difx input file output
* add SOURCE blocks to .v2d files
* allow colon separated RAs and Decs in the config file
* implement ANTENNA blocks
* write SCAN_GAP scans instead of no scans 
* start time and stop time are no longer expanded to full length of all  
  included scans
* write flag file that is compliant with difx2fits
* add oms2v2f to this package
* implement maxLength (seconds)
* don't allow white-space separated lists

Version 0.0
~~~~~~~~~~~
* Initial version